fixed links alignment

--- a/sass/components/widgets/_widgets.scss
+++ b/sass/components/widgets/_widgets.scss
@@ -75,5 +75,10 @@
 			}
 		}
 	}
+	.menu-footer-right-container {
+		ul {
+			text-align: start;
+		}
+	}
 
 }
